# rules_pkg_example

./: BUILD.bazel  WORKSPACE
